# unified_sim_model

./: .gitignore  Cargo.toml
debug-ui/: cargo.toml
debug-ui/crates/egui-custom/: Cargo.toml
debug-ui/crates/egui-custom/examples/: main.rs
debug-ui/crates/egui-custom/src/: tree.rs
gui/: Cargo.toml
gui/src/: graph.rs  main.rs  session_table.rs  tab_panel.rs
unified_sim_model/: Cargo.toml
unified_sim_model/example/: acc.rs
unified_sim_model/examples/: acc.rs  iracing.rs
unified_sim_model/other/: example.yaml  example2.yaml  example3.yaml  iracing_get_tracks_and_cars.md  iracing_todo.md  model todo.md
unified_sim_model/src/: acc_adapter.rs  adapter.rs  broadcast.rs  games.rs  lib.rs  main.rs  model.rs  time.rs  types.rs
unified_sim_model/src/acc_adapter/processors/: connection.rs  lap.rs
unified_sim_model/src/adapter/: acc.rs  dummy.rs  processors.rs
unified_sim_model/src/adapter/acc/: processors.rs
unified_sim_model/src/adapter/acc/processors/: base.rs  connection.rs  lap.rs
unified_sim_model/src/games/: acc.rs  common.rs  dummy.rs  iracing.rs
unified_sim_model/src/games/acc/: model.rs  processors.rs
unified_sim_model/src/games/acc/data/: car_data.rs  messages.rs
unified_sim_model/src/games/acc/processors/: base.rs  connection.rs  distance_driven.rs  entry_finished.rs  gap_to_leader.rs  lap.rs  position.rs  session_progress.rs
unified_sim_model/src/games/common/: distance_driven.rs  entry_finished.rs
unified_sim_model/src/games/iracing/: irsdk.rs  processors.rs
unified_sim_model/src/model/: nationality.rs  time.rs
unified_sim_model/src/types/: angle.rs  distance.rs  pressure.rs  speed.rs  temperature.rs  time.rs  weight.rs
(+56 files in other folders)
