[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
#egui_extras = "0.22.0"
egui_dock = "0.6"
egui-custom = {path="../egui-custom"}
unified_sim_model = {path="../unified_sim_model"}
egui_ltable = {path="../egui_ltable"}
dear_egui = {path="../dear_egui"}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features=["env-filter"]}