[package]
name = "unified_sim_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
tracing = "0.1.37"
thiserror = "1.0.40"
serde = {version = "1.0.160",features = ["derive"]}
serde_yaml = "0.9.21"
serde-value = "0.7.0"
bitflags = "2.3.3"
regex = "1.9.1"
yore = "1.0.2"
rand = "0.8.5"

[dependencies.windows]
version = "0.46.0"
features=[
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
tracing-subscriber = "0.3.17"