[package]
name = "egui-custom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui-wgpu = {version="0.22.0", features=["winit"]}
egui-winit = "0.22.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
winit = "0.28.6"
pollster = "0.3"
env_logger = "0.10.0"